# Docker-Playground

./: .gitignore
MS/MSM/: Dockerfile  mergesortmerg.cabal  mergesortmerg.hs
MS/MSP/: Dockerfile  mergesortprod.cabal  mergesortprod.hs
MS/MSW/: Dockerfile  entrypoint.sh  mergesortwork.cabal  mergesortwork.hs
Pipes/Pipe-R/: Dockerfile
Pipes/Pipe-W/: Dockerfile
