cabal-version:   >=1.10
name:            mergesortmerg
version:         0.1.0.0
build-type:      Simple

common warnings
    ghc-options: -Wall

executable mergesortmerg
    import:           warnings
    main-is:          mergesortmerg.hs
    build-depends:    
        base,
        bytestring,
        binary
    hs-source-dirs:   .
    default-language: Haskell2010
