cabal-version:   >=1.10
name:            mergesortwork
version:         0.1.0.0
build-type:      Simple

common warnings
    ghc-options: -Wall

executable mergesortwork
    import:           warnings
    main-is:          mergesortwork.hs
    build-depends:    
        base,
        bytestring,
        binary
    hs-source-dirs:   .
    default-language: Haskell2010
